# magnum-imgui-quickstart

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ImGuiExample.cpp  README.md  resources.conf
src/: ArcBall.h  ArcBallCamera.h  ImGuiExample.cpp  Renderer.cpp  Renderer.h  Types.h
src/ui/: WindowJobs.cpp  WindowJobs.h  WindowMain.cpp  WindowMain.h
